<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:callerContext=".NewItemActivity">


    <EditText
        android:id="@+id/etNewItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemNameHint"
        android:textSize="24sp"
        android:layout_margin="5dp"
        />

    <Spinner
        android:id="@+id/spnNewItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/etNewItemEstPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ItemPrice"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etNewItemDescription"
        android:maxLines="8"
        android:minLines="2"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ItemDescription"
        android:textSize="24sp"
        android:layout_margin="5dp"
        />

    <CheckBox
        android:id="@+id/cbNewItemPurchased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbPurchasedText"
        android:textSize="24sp"
        android:layout_margin="5dp"
        />

    <Button
        android:id="@+id/btnAddNewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextAddNewItem"
        android:textSize="24sp"
        android:layout_margin="5dp"
        />

</LinearLayout>
